update the swagger
