# internal/api/handlers/command_handlers.go
@@ -26,8 +26,8 @@ func NewCommandHandlers(service *services.CommandService) *CommandHandlers {
 // @Produce      json
 // @Param        user_id query string true "User ID"
 // @Success      200  {object}  responses.CommandsResponse
-// @Failure      400  {object}  responses.ErrorResponse
-// @Failure      500  {object}  responses.ErrorResponse
+// @Failure      400  {object}  responses.ValidationErrorResponse
+// @Failure      500  {object}  responses.InternalServerErrorResponse
 // @Router       /commands/pending [get]
 func (h *CommandHandlers) GetPendingCommands(c *gin.Context) {
 	// TODO: Get user ID from JWT token
@@ -62,8 +62,8 @@ func (h *CommandHandlers) GetPendingCommands(c *gin.Context) {
 // @Param        command_id query string true "Command ID"
 // @Param        user_id query string true "User ID"
 // @Success      200  {object}  responses.MessageResponse
-// @Failure      400  {object}  responses.ErrorResponse
-// @Failure      500  {object}  responses.ErrorResponse
+// @Failure      400  {object}  responses.ValidationErrorResponse
+// @Failure      500  {object}  responses.InternalServerErrorResponse
 // @Router       /commands/complete [post]
 func (h *CommandHandlers) CompleteCommand(c *gin.Context) {
 	// TODO: Get user ID from JWT token
